--- a/app/src/main/res/menu/post_options.xml
+++ b/app/src/main/res/menu/post_options.xml
@@ -3,6 +3,9 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
+        android:id="@+id/menu_edit"
+        android:title="@string/menu_edit" />
+    <item
         android:id="@+id/menu_remove"
         android:title="@string/menu_remove" />
 </menu>
