--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
 <resources>
     <dimen name="common_spacing">16dp</dimen>
     <dimen name="avatar_size">48dp</dimen>
+    <dimen name="icon_button_min_size">16dp</dimen>
 </resources>
