--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,4 +13,37 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+
+    <style name="LikeCheckbox" parent="Widget.AppCompat.CompoundButton.CheckBox">
+        <item name="icon">@drawable/ic_like_selector</item>
+        <item name="iconTint">@color/color_like</item>
+        <item name="android:minWidth">@dimen/icon_button_min_size</item>
+        <item name="android:minHeight">@dimen/icon_button_min_size</item>
+        <item name="android:padding">0dp</item>
+    </style>
+
+    <style name="ShareButton" parent="Widget.AppCompat.CompoundButton.CheckBox">
+        <item name="icon">@drawable/ic_baseline_share_24</item>
+        <item name="iconTint">?attr/colorControlNormal</item>
+        <item name="android:minWidth">@dimen/icon_button_min_size</item>
+        <item name="android:minHeight">@dimen/icon_button_min_size</item>
+        <item name="android:padding">0dp</item>
+    </style>
+
+    <style name="ViewsIcon" parent="Widget.AppCompat.CompoundButton.CheckBox">
+        <item name="icon">@drawable/ic_baseline_visibility_24</item>
+        <item name="iconTint">?attr/colorControlNormal</item>
+        <item name="android:minWidth">@dimen/icon_button_min_size</item>
+        <item name="android:minHeight">@dimen/icon_button_min_size</item>
+        <item name="android:padding">0dp</item>
+    </style>
+
+    <style name="OptionsButton" parent="Widget.AppCompat.CompoundButton.CheckBox">
+        <item name="icon">@drawable/ic_baseline_more_vert_24</item>
+        <item name="iconTint">?attr/colorControlNormal</item>
+        <item name="android:minWidth">@dimen/icon_button_min_size</item>
+        <item name="android:minHeight">@dimen/icon_button_min_size</item>
+        <item name="android:padding">0dp</item>
+        <item name="iconPadding">0dp</item>
+    </style>
 </resources>
