--- a/app/src/main/res/layout/post_item.xml
+++ b/app/src/main/res/layout/post_item.xml
@@ -77,11 +77,24 @@
         android:layout_marginTop="@dimen/common_spacing"
         tools:text="@sample/posts.json/data/text" />
 
+    <ImageView
+        android:id="@+id/videoPreview"
+        android:layout_width="match_parent"
+        android:layout_height="128dp"
+        app:layout_constraintTop_toBottomOf="@id/content"
+        android:layout_marginTop="@dimen/common_spacing"
+        android:layout_marginBottom="@dimen/common_spacing"
+        app:srcCompat="@drawable/ic_baseline_play_circle_outline_24"
+        android:background="@color/cardview_dark_background"
+        android:visibility="gone"
+        />
+
     <androidx.constraintlayout.widget.Barrier
+        android:id="@+id/bottomBarrier"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:barrierDirection="bottom"
-        app:constraint_referenced_ids="content"
+        app:constraint_referenced_ids="content, videoPreview"
         tools:layout_editor_absoluteX="16dp"
         tools:layout_editor_absoluteY="230dp" />
 
@@ -92,7 +105,7 @@
         android:checkable="true"
         android:layout_marginTop="@dimen/common_spacing"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/content"
+        app:layout_constraintTop_toBottomOf="@+id/bottomBarrier"
         android:button="@drawable/ic_like_selector"
         android:contentDescription="@string/likes_count"
         android:background="@android:color/transparent"
@@ -110,7 +123,7 @@
         android:contentDescription="@string/share"
         app:icon="@drawable/ic_baseline_share_24"
         app:layout_constraintStart_toEndOf="@+id/like"
-        app:layout_constraintTop_toBottomOf="@+id/content"
+        app:layout_constraintTop_toBottomOf="@+id/bottomBarrier"
         android:layout_marginLeft="@dimen/common_spacing"
         style="@style/ShareButton"
         tools:text="123"
