--- a/app/src/main/res/menu/post_options.xml
+++ b/app/src/main/res/menu/post_options.xml
@@ -8,4 +8,7 @@
     <item
         android:id="@+id/menu_remove"
         android:title="@string/menu_remove" />
+    <item
+        android:id="@+id/menu_view"
+        android:title="@string/menu_view" />
 </menu>
