--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -16,7 +16,7 @@
             app:destination="@id/editPostFragment" />
         <action
             android:id="@+id/action_feedFragment_to_viewPostFragment"
-            app:destination="@id/viewPostFragment" />
+            app:destination="@id/postDetailsFragment" />
     </fragment>
     <fragment
         android:id="@+id/editPostFragment"
@@ -24,8 +24,12 @@
         android:label="fragment_edit_post"
         tools:layout="@layout/fragment_edit_post" />
     <fragment
-        android:id="@+id/viewPostFragment"
-        android:name="ru.netology.nmedia.ViewPostFragment"
+        android:id="@+id/postDetailsFragment"
+        android:name="ru.netology.nmedia.postDetailsFragment"
         android:label="fragment_view_post"
-        tools:layout="@layout/fragment_view_post" />
+        tools:layout="@layout/fragment_post_details" >
+        <action
+            android:id="@+id/action_viewPostFragment_to_editPostFragment"
+            app:destination="@id/editPostFragment" />
+    </fragment>
 </navigation>
