--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/feedFragment"
-        android:name="ru.netology.nmedia.FeedFragment"
+        android:name="ru.netology.nmedia.activity.FeedFragment"
         android:label="fragment_feed"
         tools:layout="@layout/fragment_feed"
         >
@@ -20,12 +20,12 @@
     </fragment>
     <fragment
         android:id="@+id/editPostFragment"
-        android:name="ru.netology.nmedia.EditPostFragment"
+        android:name="ru.netology.nmedia.activity.EditPostFragment"
         android:label="fragment_edit_post"
         tools:layout="@layout/fragment_edit_post" />
     <fragment
         android:id="@+id/postDetailsFragment"
-        android:name="ru.netology.nmedia.PostDetailsFragment"
+        android:name="ru.netology.nmedia.activity.PostDetailsFragment"
         android:label="fragment_view_post"
         tools:layout="@layout/fragment_post_details" >
         <action
