--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,5 @@
     <dimen name="common_spacing">16dp</dimen>
     <dimen name="avatar_size">48dp</dimen>
     <dimen name="icon_button_min_size">16dp</dimen>
+    <dimen name="icon_button_padding">12dp</dimen>
 </resources>
