--- a/app/src/main/res/layout/post_item.xml
+++ b/app/src/main/res/layout/post_item.xml
@@ -78,13 +78,13 @@
         tools:text="@sample/posts.json/data/text" />
 
     <ImageView
-        android:id="@+id/videoPreview"
+        android:id="@+id/attachmentPreview"
         android:layout_width="match_parent"
-        android:layout_height="128dp"
+        android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/content"
         android:layout_marginTop="@dimen/common_spacing"
         android:layout_marginBottom="@dimen/common_spacing"
-        app:srcCompat="@drawable/ic_baseline_play_circle_outline_24"
+        android:adjustViewBounds="true"
         android:background="@color/cardview_dark_background"
         android:visibility="gone"
         />
@@ -94,7 +94,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:barrierDirection="bottom"
-        app:constraint_referenced_ids="content, videoPreview"
+        app:constraint_referenced_ids="content, attachmentPreview"
         tools:layout_editor_absoluteX="16dp"
         tools:layout_editor_absoluteY="230dp" />
 
