Login fragment added

--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -20,6 +20,9 @@
         <action
             android:id="@+id/action_feedFragment_to_imageViewFragment"
             app:destination="@id/imageViewFragment" />
+        <action
+            android:id="@+id/action_feedFragment_to_loginFragment"
+            app:destination="@id/loginFragment" />
     </fragment>
     <fragment
         android:id="@+id/editPostFragment"
@@ -39,4 +42,8 @@
         android:id="@+id/imageViewFragment"
         android:name="ru.netology.nmedia.activity.ImageViewFragment"
         android:label="ImageViewFragment" />
+    <fragment
+        android:id="@+id/loginFragment"
+        android:name="ru.netology.nmedia.activity.LoginFragment"
+        android:label="LoginFragment" />
 </navigation>
